kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xnl-fintech
  labels:
    name: xnl-fintech
    environment: shared
